<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.odensala.onegaimuscle.ui.EditWorkoutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/textview_edit_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_edit_exercise"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/textview_title_exercise"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_title_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_exercise"
            app:layout_constraintBottom_toTopOf="@+id/textview_title_weight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner_workouts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/textview_title_exercise"
            app:layout_constraintStart_toEndOf="@id/textview_title_exercise"
            app:layout_constraintTop_toTopOf="@id/textview_title_exercise" />

        <TextView
            android:id="@+id/textview_title_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_weight"
            app:layout_constraintBottom_toTopOf="@+id/textview_title_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_title_exercise" />


        <EditText
            android:id="@+id/edittext_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_weight"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/textview_title_weight"
            app:layout_constraintStart_toEndOf="@id/textview_title_weight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg"
            app:layout_constraintBaseline_toBaselineOf="@id/edittext_weight"
            app:layout_constraintStart_toEndOf="@id/edittext_weight" />

        <TextView
            android:id="@+id/textview_title_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_title_weight" />

        <EditText
            android:id="@+id/edittext_details"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/gray_200"
            android:gravity="top"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_title_details" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/save_workout"
        android:src="@drawable/ic_baseline_check_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>